Terminando la página web que contiene un formulario

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,7 @@ form {
     max-width: 500px;
     min-width: 300px;
     width: 60vw;
+    padding: 2em;
   }
 
 fieldset {
@@ -65,3 +66,11 @@ input[type="submit"] {
     margin: 1em auto;
     min-width: 300px;
   }
+
+input[type="file"] {
+    padding: 1px 2px;
+}
+
+a {
+    color: #dfdfe2;
+}
